# TVM-RetinaFace

./: CMakeLists.txt  README.md  test.sh
model/: deploy_graph.json  deploy_param.params
python/: convert_mxnet2tvm.py
src/: CMakeLists.txt  retinaface.cpp  retinaface.h
test/: CMakeLists.txt  main.cpp
